@@ -7,6 +7,9 @@ Currently deprecated and liable to be removed:
 
 1.8-18
 
+* fixes to bam.update to deal with NA#s in response and fast REML smoothing
+  parameter estimation. 
+
 * 'scat' family now takes a 'min.df' argument which defaults to 3. Could 
   otherwise occasionally have indefinite LAML problems as df headed towards 2.
 
